# money-tracker

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  api.ts  cache.ts  store.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  schema.sql  seed.sql
src/components/: AccountPicker.tsx  DateRangePicker.tsx  Icon.tsx  Loading.tsx  Modal.tsx  TxModal.tsx  usePopover.ts
src/pages/: Accounts.tsx  Credits.tsx  Dashboard.tsx  Deposits.tsx  Projects.tsx  Settings.tsx  Transactions.tsx
tools/: import_statements.py
tools/banks/: __init__.py  common.py  ozon.py  sber.py  tbank.py  vtb.py
